[package]
name = "sloggers"
version = "2.2.0"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "This library provides frequently used slog loggers and convenient functions"
homepage = "https://github.com/sile/sloggers"
repository = "https://github.com/sile/sloggers"
readme = "README.md"
keywords = ["logger"]
license = "MIT"
edition = "2018"

[badges]
coveralls = {repository = "sile/sloggers"}

[features]
default = ["libflate", "slog-kvfilter"]
json = ["slog-json"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
libflate = {version = "2", optional = true}
serde = {version = "1", features = ["derive"]}
slog = "2"
slog-async = "2"
slog-term = "2"
slog-scope = "4"
slog-kvfilter = {version = "~0.7", optional = true}
slog-json = {version = "2.3.0", optional = true}
slog-stdlog = "4"
trackable = "1"
regex="1"

[dev-dependencies]
clap = "4"
log = "0.4"
serdeconv = "0.4"
tempfile = "3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
once_cell = "1"

[target.'cfg(windows)'.dependencies]
winapi = "~0.3.5"
windows-acl = "~0.3.0"
